# silent_payments_plugin

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/silent_payments_plugin_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: silent_payments_plugin.podspec
ios/Classes/: silent_payments_plugin.c
lib/: example_plugin.dart  silent_payments_plugin.dart  silent_payments_plugin_bindings_generated.dart
linux/: CMakeLists.txt
macos/: silent_payments_plugin.podspec
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: CMakeLists.txt  silent_payments_plugin.c  silent_payments_plugin.h
windows/: CMakeLists.txt
